--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
@@ -6,7 +6,7 @@
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title${i18n_close}' />
 	<${macro}boxBody>
-    <${macro}tform name='create_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${link}/Manage${business_class.businessClass}s.jsp'>
+    <${macro}tform name='create_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp'>
 
         <${macro}messages errors=errors />
         <${macro}input type="hidden" id="id" name="id"/>
@@ -33,7 +33,7 @@
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title${i18n_close}' />
 	<${macro}boxBody>
-    <${macro}tform class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${link}/Manage${business_class.businessClass}s.jsp">
+    <${macro}tform class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp">
 			<${macro}messages errors=errors />
 			<${macro}input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
 			<${macro}input type="hidden" value="${bra_open}token${bra_close}" name="token" />
@@ -57,7 +57,7 @@
 
 <${macro}box>
 	<${macro}boxHeader title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}.title${i18n_close}' boxTools=true>
-		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${link}/Manage${business_class.businessClass}s.jsp'>
+		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp'>
 			<${macro}button type='submit' name='view_create${business_class.businessClass}' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd${i18n_close}' />
 		</${macro}tform>
 	</${macro}boxHeader>
@@ -83,9 +83,9 @@
             </td>
         </#list>
         <td>
-			<${macro}aButton href='jsp/admin/plugins/${link}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' buttonIcon='pencil' showTitle=false />
+			<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' buttonIcon='pencil' showTitle=false />
 						
-			<${macro}aButton href='jsp/admin/plugins/${link}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' color='btn-danger' showTitle=false />
+			<${macro}aButton href='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' color='btn-danger' showTitle=false />
 
         </td>
         </tr>
