--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
@@ -9,12 +9,12 @@
     <${macro}tform name='create_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp'>
 
         <${macro}messages errors=errors />
-        <${macro}input type="hidden" id="id" name="id"/>
-        <${macro}input type="hidden" value="${bra_open}token${bra_close}" name="token" />
+        <input type="hidden" id="id" name="id"/>
+        <input type="hidden" value="${bra_open}token${bra_close}" name="token" />
 
         <#list business_class.attributes as attribute>
 				<${macro}formGroup labelKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' <#if attribute.notNull>mandatory=true</#if>>
-					<${macro}input type='text' name='${attribute.paramName}' value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!\'\'${bra_close}' />
+					<input type='text' name='${attribute.paramName}' value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" />
 				</${macro}formGroup>
         </#list>
 				
@@ -35,12 +35,12 @@
 	<${macro}boxBody>
     <${macro}tform class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${pluginPath}/Manage${business_class.businessClass}s.jsp">
 			<${macro}messages errors=errors />
-			<${macro}input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
-			<${macro}input type="hidden" value="${bra_open}token${bra_close}" name="token" />
+			<input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
+			<input type="hidden" value="${bra_open}token${bra_close}" name="token" />
 			
 			<#list business_class.attributes as attribute>
 				<${macro}formGroup labelKey='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' <#if attribute.notNull>mandatory=true</#if>>
-					<${macro}input type='text' name='${attribute.paramName}' value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}' />
+					<input type='text' name='${attribute.paramName}' value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" />
 				</${macro}formGroup>
 			</#list>
         <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}"/>
@@ -67,7 +67,7 @@
     <div class="clearfix"></div>
     <${macro}table>
         <tr>
-            <${macro}input type="hidden" id="id" name="id"/>
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
             <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
             </#list>
@@ -76,7 +76,7 @@
         <${macro}tableHeadBodySeparator />
             <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
         <tr>
-            <${macro}input type="hidden" id="id" name="id"/>
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
             <td>
                 ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
