--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage_test.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage_test.html
@@ -34,12 +34,17 @@
 
 package fr.paris.lutece.plugins.${radical_package}.web;
 
+import fr.paris.lutece.portal.service.admin.AccessDeniedException;
+import fr.paris.lutece.portal.service.message.SiteMessageException;
+import fr.paris.lutece.portal.web.LocalVariables;
+import fr.paris.lutece.test.LuteceTestCase;
+import fr.paris.lutece.portal.service.security.SecurityTokenService;
+import org.springframework.mock.web.MockHttpServletRequest;
+import org.springframework.mock.web.MockHttpServletResponse;
+import org.springframework.mock.web.MockServletConfig;
 import fr.paris.lutece.plugins.${radical_package}.business.${business_class.businessClass};
 import fr.paris.lutece.plugins.${radical_package}.business.${business_class.businessClass}Home;
 import java.util.List;
-import fr.paris.lutece.test.LuteceTestCase;
-import fr.paris.lutece.portal.web.LocalVariables;
-import fr.paris.lutece.portal.service.security.SecurityTokenService;
 <#list business_class.attributes as attribute>
 	<#if attribute.type = "Date">
 		<#assign hasDate = true>
@@ -50,18 +55,10 @@ import java.sql.Date;
 import fr.paris.lutece.util.date.DateUtil;
 import fr.paris.lutece.portal.web.l10n.LocaleService;
 </#if>
-import java.io.IOException;
-import org.springframework.mock.web.MockHttpServletRequest;
-import org.springframework.mock.web.MockHttpServletResponse;
-import org.springframework.mock.web.MockServletConfig;
-import fr.paris.lutece.portal.business.user.AdminUser;
-import fr.paris.lutece.portal.service.admin.AccessDeniedException;
-import fr.paris.lutece.portal.service.admin.AdminAuthenticationService;
-import fr.paris.lutece.portal.service.security.UserNotSignedException;
 /**
  * This is the business class test for the object ${business_class.businessClass}
  */
-public class ${business_class.businessClass}JspBeanTest extends LuteceTestCase
+public class ${business_class.businessClass}XPageTest extends LuteceTestCase
 {
 <#list business_class.attributes as attribute>
 <#--  attributeTypeId 5 corresponds to email type -->
@@ -87,24 +84,22 @@ public class ${business_class.businessClass}JspBeanTest extends LuteceTestCase
 </#if>
 </#list>
 
-public void testJspBeans(  ) throws AccessDeniedException
-	{	
-     	MockHttpServletRequest request = new MockHttpServletRequest();
-		MockHttpServletResponse response = new MockHttpServletResponse();
-		MockServletConfig config = new MockServletConfig();
+public void testXPage(  ) throws AccessDeniedException
+	{
+        // Xpage create test
+        MockHttpServletRequest request = new MockHttpServletRequest( );
+		MockHttpServletResponse response = new MockHttpServletResponse( );
+		MockServletConfig config = new MockServletConfig( );
 
-		//display admin ${business_class.businessClass} management JSP
-		${business_class.businessClass}JspBean jspbean = new ${business_class.businessClass}JspBean();
-		String html = jspbean.getManage${business_class.businessClass}s( request );
-		assertNotNull(html);
-
-		//display admin ${business_class.businessClass} creation JSP
-		html = jspbean.getCreate${business_class.businessClass}( request );
-		assertNotNull(html);
-
-		//action create ${business_class.businessClass}
+		${business_class.instanceName?cap_first}XPage xpage = new ${business_class.instanceName?cap_first}XPage( );
+		assertNotNull( xpage.getCreate${business_class.instanceName?cap_first}( request ) );
+		
 		request = new MockHttpServletRequest();
-
+		request.addParameter( "token", SecurityTokenService.getInstance( ).getToken( request, "create${business_class.instanceName?cap_first}" ));
+		
+		LocalVariables.setLocal(config, request, response);
+		
+		request.addParameter( "action" , "create${business_class.instanceName?cap_first}" );
 		<#list business_class.attributes as attribute>
 		<#if attribute.type = "String">
         request.addParameter( "${attribute.paramName}" , ${attribute.paramName?upper_case}1 );
@@ -114,51 +109,23 @@ public void testJspBeans(  ) throws AccessDeniedException
         request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.paramName?upper_case}1) );
         </#if>
 		</#list>
-		request.addParameter("action","create${business_class.businessClass}");
-        request.addParameter( "token", SecurityTokenService.getInstance( ).getToken( request, "create${business_class.businessClass}" ));
-		request.setMethod("POST");
-		response = new MockHttpServletResponse();
-		AdminUser adminUser = new AdminUser();
-		adminUser.setAccessCode("admin");
+		request.setMethod( "POST" );
+        
+        assertNotNull( xpage.doCreate${business_class.instanceName?cap_first}( request ) );
 
-		try 
-		{
-			AdminAuthenticationService.getInstance( ).registerUser(request, adminUser);
-			html = jspbean.processController( request, response ); 
-			
-			// MockResponse object does not redirect, result is always null
-			assertNull( html );
-		}
-		catch (AccessDeniedException e)
-		{
-			fail("access denied");
-		}
-		catch (UserNotSignedException e) 
-		{
-			fail("user not signed in");
-		}
+		//modify ${business_class.businessClass}	
+		List<Integer> listIds = ${business_class.businessClass}Home.getId${business_class.businessClass}sList(); 
 
-		//display modify ${business_class.businessClass} JSP
+		assertTrue( !listIds.isEmpty( ) );
+
 		request = new MockHttpServletRequest();
-		<#list business_class.attributes as attribute>
-		<#if attribute.type = "String">
-        request.addParameter( "${attribute.paramName}" , ${attribute.paramName?upper_case}1 );
-        <#elseif attribute.type = "Date">
-        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.paramName?upper_case}1, LocaleService.getDefault( ) ) );
-        <#else>
-        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.paramName?upper_case}1) );
-        </#if>
-		</#list>
-		List<Integer> listIds = ${business_class.businessClass}Home.getId${business_class.businessClass}sList();
-        assertTrue( !listIds.isEmpty( ) );
-        request.addParameter( "id", String.valueOf( listIds.get( 0 ) ) );
-		jspbean = new ${business_class.businessClass}JspBean();
+		request.addParameter( "id", String.valueOf( listIds.get( 0 ) ) );
 
-		assertNotNull( jspbean.getModify${business_class.businessClass}( request ) );
+		assertNotNull( xpage.getModify${business_class.businessClass}( request ) );
 
-		//action modify ${business_class.businessClass}
-		request = new MockHttpServletRequest();
 		response = new MockHttpServletResponse();
+		request = new MockHttpServletRequest();
+		LocalVariables.setLocal(config, request, response);
 		<#list business_class.attributes as attribute>
 		<#if attribute.type = "String">
         request.addParameter( "${attribute.paramName}" , ${attribute.paramName?upper_case}2 );
@@ -168,67 +135,36 @@ public void testJspBeans(  ) throws AccessDeniedException
         request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.paramName?upper_case}2) );
         </#if>
 		</#list>
-		request.setRequestURI("jsp/admin/plugins/example/Manage${business_class.businessClass}s.jsp");
-		//important pour que MVCController sache quelle action effectuer, sinon, il redirigera vers create${business_class.businessClass}, qui est l'action par défaut
-		request.addParameter("action","modify${business_class.businessClass}");
+
 		request.addParameter( "token", SecurityTokenService.getInstance( ).getToken( request, "modify${business_class.businessClass}" ));
-		adminUser = new AdminUser();
-		adminUser.setAccessCode("admin");
+		request.addParameter( "id", String.valueOf( listIds.get( 0 ) ) );
+		assertNotNull( xpage.doModify${business_class.businessClass}( request ) );
 
-		try 
-		{
-			AdminAuthenticationService.getInstance( ).registerUser(request, adminUser);
-			html = jspbean.processController( request, response ); 
-
-			// MockResponse object does not redirect, result is always null
-			assertNull( html );
-		}
-		catch (AccessDeniedException e)
-		{
-			fail("access denied");
-		}
-		catch (UserNotSignedException e) 
-		{
-			fail("user not signed in");
-		}
-		
-		//get remove ${business_class.businessClass}
+		//do confirm remove ${business_class.businessClass}
 		request = new MockHttpServletRequest();
-        //request.setRequestURI("jsp/admin/plugins/example/Manage${business_class.businessClass}s.jsp");
-        request.addParameter( "id", String.valueOf( listIds.get( 0 ) ) );
-		jspbean = new ${business_class.businessClass}JspBean();
-		request.addParameter("action","confirmRemove${business_class.businessClass}");
-		assertNotNull( jspbean.getModify${business_class.businessClass}( request ) );
-				
+		request.addParameter( "action" , "confirmRemove${business_class.businessClass}" );
+		request.addParameter( "id", String.valueOf( listIds.get( 0 ) ) );
+		request.addParameter( "token", SecurityTokenService.getInstance( ).getToken( request, "confirmRemove${business_class.businessClass}" ));;
+		request.setMethod("GET");
+
+		try
+		{
+			xpage.getConfirmRemove${business_class.businessClass}( request );
+		}
+		catch(Exception e)
+		{
+			assertTrue(e instanceof SiteMessageException);
+		}
+
 		//do remove ${business_class.businessClass}
-		request = new MockHttpServletRequest();
 		response = new MockHttpServletResponse();
-		request.setRequestURI("jsp/admin/plugins/example/Manage${business_class.businessClass}ts.jsp");
-		//important pour que MVCController sache quelle action effectuer, sinon, il redirigera vers create${business_class.businessClass}, qui est l'action par défaut
-		request.addParameter("action","remove${business_class.businessClass}");
+		request = new MockHttpServletRequest();
+		LocalVariables.setLocal(config, request, response);
+		request.addParameter( "action" , "remove${business_class.businessClass}" );
 		request.addParameter( "token", SecurityTokenService.getInstance( ).getToken( request, "remove${business_class.businessClass}" ));
 		request.addParameter( "id", String.valueOf( listIds.get( 0 ) ) );
-		request.setMethod("POST");
-		adminUser = new AdminUser();
-		adminUser.setAccessCode("admin");
+		assertNotNull( xpage.doRemove${business_class.businessClass}( request ) );
 
-		try 
-		{
-			AdminAuthenticationService.getInstance( ).registerUser(request, adminUser);
-			html = jspbean.processController( request, response ); 
-
-			// MockResponse object does not redirect, result is always null
-			assertNull( html );
-		}
-		catch (AccessDeniedException e)
-		{
-			fail("access denied");
-		}
-		catch (UserNotSignedException e) 
-		{
-			fail("user not signed in");
-		}	
-     
-     }
+    }
+    
 }
- 
