--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_class.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_class.html
@@ -60,6 +60,7 @@ import org.hibernate.validator.constraints.Email;
 import java.io.Serializable;
 <#if hasDate?? && hasDate>
 import java.sql.Date;
+import javax.validation.constraints.NotNull;
 </#if>
 
 /**
