--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
@@ -16,7 +16,8 @@
 
     <modelVersion>${pom_model_version}</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
-    <#if plugin.type == "MODULE">
+
+<#if plugin.module = true>
     <artifactId>module-${plugin.pluginName?lower_case}</artifactId>
     <#else>
     <artifactId>plugin-${plugin.pluginName?lower_case}</artifactId>
@@ -24,7 +25,7 @@
     <packaging>lutece-plugin</packaging>
     <version>${plugin.pluginVersion}-SNAPSHOT</version>
 
-    <#if plugin.type == "MODULE">
+    <#if plugin.module = true>
     <name>Lutece ${plugin.pluginName?replace("-", " ")?lower_case} module</name>
     <#else>
     <name>Lutece ${plugin.pluginName?lower_case} plugin</name>
