--- a/webapp/WEB-INF/templates/admin/plugins/pluginwizard/manage_configurationkey.html
+++ b/webapp/WEB-INF/templates/admin/plugins/pluginwizard/manage_configurationkey.html
@@ -23,8 +23,8 @@
 							<td> ${configurationkey.keyDescription}</a></td>     			
 							<td>${configurationkey.keyValue}</td>
 							<td>
-								<@aButton href='jsp/admin/plugins/pluginwizard/ModifyConfigurationKey.jsp?configurationkey_id_key=${configurationkey.idKey}' title='#i18n{portal.util.labelModify}' showTitle=false buttonIcon='edit' />
-								<@aButton href='jsp/admin/plugins/pluginwizard/RemoveConfigurationKey.jsp?configurationkey_id_key=${configurationkey.idKey}' title='#i18n{portal.util.labelDelete}' showTitle=false buttonIcon='trash' color='btn-danger' />
+								<@aButton href='jsp/admin/plugins/pluginwizard/ModifyConfigurationKey.jsp?configurationkey_id_key=${configurationkey.idKey}' title='#i18n{portal.util.labelModify}' buttonIcon='edit' />
+								<@aButton href='jsp/admin/plugins/pluginwizard/RemoveConfigurationKey.jsp?configurationkey_id_key=${configurationkey.idKey}' title='#i18n{portal.util.labelDelete}' buttonIcon='trash' color='btn-danger' />
 							</td>        
 						</tr>        
 						</#list>   
