--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean.html
@@ -31,7 +31,7 @@
  *
  * License 1.0
  */
-<#if plugin_model.module = true>
+  <#if plugin_model.type= "MODULE" >
   	<#assign radicalPackage= plugin_model.pluginName?split("-")[0]+".modules."+plugin_model.pluginName?split("-")[1] />
   	<#assign msg= "module."+plugin_model.pluginName?split("-")[0]+"."+plugin_model.pluginName?split("-")[1] />
  <#else>
