PLUGINWIZARD-135 new templates for Lutece v6 and new generation scheme

--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_k_abstract.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_k_abstract.html
@@ -31,7 +31,7 @@
  *
  * License 1.0
  */
- <#if plugin_model.type= "MODULE" >
+ <#if plugin_model.module = true >
   	<#assign radicalPackage= plugin_model.pluginName?split("-")[0]+".modules."+plugin_model.pluginName?split("-")[1] />
  <#else>
  	<#assign radicalPackage= plugin_model.pluginName />
