--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage_v6.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage_v6.html
@@ -17,14 +17,14 @@
             <input type="hidden" value="${bra_open}token${bra_close}" name="token" />
 
             <#list business_class.attributes as attribute>
-            <div class="form-group">
-                <label class="col-sm-3 control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> tabindex="${attribute_index}" />
-                    <span class="help-block">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
-                </div>
-            </div>
-            </#list>
+          <${macro}formGroup labelFor='${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' mandatory=true>
+						<#if attribute.type != "boolean">
+						<${macro}input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> tabIndex="${attribute_index + 1}" />
+						<#else>
+						<${macro}checkBox id="${attribute.paramName}" name="${attribute.paramName}" value="1" checked=${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!'false' tabIndex='${attribute_index}' />
+						</#if>
+					</${macro}formGroup>
+				</#list>
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button name="action_create${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}">
@@ -55,14 +55,15 @@
             <${macro}messages errors=errors />
             <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
             <input type="hidden" value="${bra_open}token${bra_close}" name="token" />
-            <#list business_class.attributes as attribute>
-            <div class="form-group">
-                <label class="col-sm-3 control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" tabindex="${attribute_index}" />
-                </div>
-            </div>
-            </#list>
+           <#list business_class.attributes as attribute>
+				<${macro}formGroup labelFor='${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' mandatory=true>
+				<#if attribute.type != "boolean">
+          		<${macro}input type='text' id='${attribute.paramName}' name='${attribute.paramName}' <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!\'\'${bra_close}' tabIndex='${attribute_index}' />
+				<#else>
+				<${macro}checkBox id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value="1" checked=${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!'false' tabIndex='${attribute_index}' />
+			    </#if>
+				</${macro}formGroup>
+				</#list>
 
 
             <div class="form-group">
@@ -105,8 +106,14 @@
         <tr>
             <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
-            </#list>
+            <td>
+            				<#if attribute.type != "boolean">
+							${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
+							<#else>
+							${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}?c${bra_close}
+							</#if>
+            </td>    
+        </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
             <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
