--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_test.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_test.html
@@ -107,19 +107,19 @@ public void testJspBeans(  ) throws AccessDeniedException
 
 		<#list business_class.attributes as attribute>
 		<#if attribute.type = "String">
-        request.addParameter( "${attribute.paramName}" , ${attribute.paramName?upper_case}1 );
+        request.addParameter( "${attribute.paramName}" , ${attribute.name?upper_case}1 );
         <#elseif attribute.type = "Date">
-        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.paramName?upper_case}1, LocaleService.getDefault( ) ) );
+        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.name?upper_case}1, LocaleService.getDefault( ) ) );
         <#else>
-        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.paramName?upper_case}1) );
+        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.name?upper_case}1) );
         </#if>
 		</#list>
 		request.addParameter("action","create${business_class.businessClass}");
         request.addParameter( "token", SecurityTokenService.getInstance( ).getToken( request, "create${business_class.businessClass}" ));
-		request.setMethod("POST");
-		response = new MockHttpServletResponse();
-		AdminUser adminUser = new AdminUser();
-		adminUser.setAccessCode("admin");
+		request.setMethod( "POST" );
+		response = new MockHttpServletResponse( );
+		AdminUser adminUser = new AdminUser( );
+		adminUser.setAccessCode( "admin" );
 
 		try 
 		{
@@ -142,11 +142,11 @@ public void testJspBeans(  ) throws AccessDeniedException
 		request = new MockHttpServletRequest();
 		<#list business_class.attributes as attribute>
 		<#if attribute.type = "String">
-        request.addParameter( "${attribute.paramName}" , ${attribute.paramName?upper_case}1 );
+        request.addParameter( "${attribute.paramName}" , ${attribute.name?upper_case}1 );
         <#elseif attribute.type = "Date">
-        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.paramName?upper_case}1, LocaleService.getDefault( ) ) );
+        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.name?upper_case}1, LocaleService.getDefault( ) ) );
         <#else>
-        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.paramName?upper_case}1) );
+        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.name?upper_case}1) );
         </#if>
 		</#list>
 		List<Integer> listIds = ${business_class.businessClass}Home.getId${business_class.businessClass}sList();
@@ -161,11 +161,11 @@ public void testJspBeans(  ) throws AccessDeniedException
 		response = new MockHttpServletResponse();
 		<#list business_class.attributes as attribute>
 		<#if attribute.type = "String">
-        request.addParameter( "${attribute.paramName}" , ${attribute.paramName?upper_case}2 );
+        request.addParameter( "${attribute.paramName}" , ${attribute.name?upper_case}2 );
         <#elseif attribute.type = "Date">
-        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.paramName?upper_case}2, LocaleService.getDefault( ) ) );
+        request.addParameter( "${attribute.paramName}" , DateUtil.getDateString( ${attribute.name?upper_case}2, LocaleService.getDefault( ) ) );
         <#else>
-        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.paramName?upper_case}2) );
+        request.addParameter( "${attribute.paramName}" , String.valueOf( ${attribute.name?upper_case}2) );
         </#if>
 		</#list>
 		request.setRequestURI("jsp/admin/plugins/example/Manage${business_class.businessClass}s.jsp");
