PLUGINWIZARD-136 remove xpages commons' macros

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -31,7 +31,7 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
 								<div class="col-md-9">       
-									<@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
+									<input name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" class="form-control input-md" />      
 								</div> 
 							</div>
 
